[UPDATE]Lọc coupon dựa thoe franchise của customer